# codex-switch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROL_INTERFACE.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  SESSION_CONTROL_INTERFACE.md  SUPPORT.md  task_orchestration_design_note.md  task_orchestration_plan.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: error.rs  identity_cleanup.rs  identity_naming.rs  lib.rs  main.rs
src/automatic_handoff/: mod.rs
src/automatic_selection/: mod.rs
src/bootstrap/: mod.rs
src/cli/: mod.rs  session_control.rs  task_orchestration.rs
src/codex_rpc/: mod.rs
src/continuation/: mod.rs
src/decision_log/: mod.rs
src/domain/: checkpoint.rs  decision.rs  health.rs  identity.rs  mod.rs  policy.rs  quota.rs  selection.rs  thread.rs  verification.rs
src/exec_failover/: mod.rs
src/handoff/: mod.rs
src/identity_health/: mod.rs
src/identity_registry/: mod.rs
src/identity_selection/: mod.rs
src/identity_selector/: mod.rs
src/launcher/: mod.rs
src/quota_status/: mod.rs
src/selection_policy/: mod.rs
src/session_control/: domain.rs  mod.rs  service.rs  store.rs
src/shared_session_store/: mod.rs
src/storage/: checkpoint_store.rs  health_store.rs  mod.rs  paths.rs  policy_store.rs  (+7 more)
tests/: cli_automatic_handoff.rs  cli_identity_flows.rs  cli_manual_switch.rs  cli_policy_health_failover.rs  cli_quota_status.rs  cli_task_orchestration.rs  cli_thread_handoff.rs  cli_workspace_force.rs  session_control_cli.rs
tools/: codex_identity.py
(+10 files in other folders)
