[package]
name = "codex-switch"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_switch"
path = "src/lib.rs"

[[bin]]
name = "codex-switch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"
