[package]
name = "codex-switch"
version = "0.1.0"
edition = "2021"
description = "Quota-aware Codex identity switcher with isolated CODEX_HOME management, safe thread handoff, and session orchestration."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheWeaklessOne/codex-switch"
homepage = "https://github.com/TheWeaklessOne/codex-switch"
keywords = ["codex", "cli", "automation", "quota", "workspace"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "codex_switch"
path = "src/lib.rs"

[[bin]]
name = "codex-switch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.39", features = ["derive"] }
libc = "0.2.174"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"
